--- a/Run_mlflow_on_Colab.ipynb
+++ b/Run_mlflow_on_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwHTzQcOC3aLnlRRBNm7CO",
+      "authorship_tag": "ABX9TyPyE/AsLEyJdyXsQu7+S7/R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,12 @@
       "metadata": {
         "id": "nvWIdihF-piM"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Wzvgjkqu-KTg"
       },
@@ -56,7 +56,8 @@
     {
       "cell_type": "code",
       "source": [
-        "subprocess.Popen([\"mlflow\", \"ui\", \"--backend-store-uri\", \"sqlite:///mlflow.db\"]) "
+        "MLFLOW_TRACKING_URI = \"sqlite:///mlflow.db\"\n",
+        "subprocess.Popen([\"mlflow\", \"ui\", \"--backend-store-uri\", MLFLOW_TRACKING_URI]) "
       ],
       "metadata": {
         "id": "7wdiGmnKCx1y"
@@ -67,7 +68,7 @@
     {
       "cell_type": "code",
       "source": [
-        "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
+        "mlflow.set_tracking_uri(MLFLOW_TRACKING_URI)\n",
         "# mlflow will create an experiment if it doesn't exist\n",
         "mlflow.set_experiment(\"duration-prediction-experiment\")"
       ],
@@ -105,7 +106,7 @@
       "metadata": {
         "id": "JU180is1Hybj"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +118,7 @@
       "metadata": {
         "id": "D6mVda0ZHxqE"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +131,7 @@
       "metadata": {
         "id": "ihV_RyZwHp9k"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +149,7 @@
       "metadata": {
         "id": "Kqc3JpYEHo89"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +161,7 @@
       "metadata": {
         "id": "nj7TrY31Hm-9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +173,7 @@
       "metadata": {
         "id": "jqjGjHHDHiaE"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +193,7 @@
       "metadata": {
         "id": "ODY5xZoTHgjj"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +206,7 @@
       "metadata": {
         "id": "Ji66xEe9Hb_c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +228,7 @@
       "metadata": {
         "id": "5h0d4yRQFHB0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     }
   ]
