more on working with MlflowClient

--- a/mlflow-client.ipynb
+++ b/mlflow-client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<Popen: returncode: None args: ['mlflow', 'ui', '--backend-store-uri', 'sqli...>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -19,13 +19,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-05-28 05:13:54 +0000] [11582] [INFO] Starting gunicorn 20.1.0\n",
-      "[2023-05-28 05:13:54 +0000] [11582] [INFO] Listening at: http://127.0.0.1:5000 (11582)\n",
-      "[2023-05-28 05:13:54 +0000] [11582] [INFO] Using worker: sync\n",
-      "[2023-05-28 05:13:54 +0000] [11583] [INFO] Booting worker with pid: 11583\n",
-      "[2023-05-28 05:13:54 +0000] [11584] [INFO] Booting worker with pid: 11584\n",
-      "[2023-05-28 05:13:54 +0000] [11591] [INFO] Booting worker with pid: 11591\n",
-      "[2023-05-28 05:13:54 +0000] [11592] [INFO] Booting worker with pid: 11592\n"
+      "[2023-05-29 04:19:04 +0000] [1290] [INFO] Starting gunicorn 20.1.0\n",
+      "[2023-05-29 04:19:04 +0000] [1290] [INFO] Listening at: http://127.0.0.1:5000 (1290)\n",
+      "[2023-05-29 04:19:04 +0000] [1290] [INFO] Using worker: sync\n",
+      "[2023-05-29 04:19:04 +0000] [1291] [INFO] Booting worker with pid: 1291\n",
+      "[2023-05-29 04:19:04 +0000] [1292] [INFO] Booting worker with pid: 1292\n",
+      "[2023-05-29 04:19:04 +0000] [1293] [INFO] Booting worker with pid: 1293\n",
+      "[2023-05-29 04:19:04 +0000] [1294] [INFO] Booting worker with pid: 1294\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,17 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<RegisteredModel: aliases={}, creation_timestamp=1685250681213, description='', last_updated_timestamp=1685253602169, latest_versions=[<ModelVersion: aliases=[], creation_timestamp=1685250681425, current_stage='Staging', description='', last_updated_timestamp=1685250698435, name='green data duration prediction', run_id='d95a1ba956ec425baf0d2076fb9eafa1', run_link='', source='/workspaces/codespaces-blank/mlruns/1/d95a1ba956ec425baf0d2076fb9eafa1/artifacts/models_mlflow', status='READY', status_message=None, tags={}, user_id=None, version=1>,\n",
-       "  <ModelVersion: aliases=[], creation_timestamp=1685253602169, current_stage='None', description=None, last_updated_timestamp=1685253602169, name='green data duration prediction', run_id='77ee85eda95340f3a6fea26bff864a02', run_link=None, source='/workspaces/codespaces-blank/mlruns/1/77ee85eda95340f3a6fea26bff864a02/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=3>], name='green data duration prediction', tags={}>]"
+       "[<RegisteredModel: aliases={}, creation_timestamp=1685250681213, description='', last_updated_timestamp=1685255074697, latest_versions=[<ModelVersion: aliases=[], creation_timestamp=1685253602169, current_stage='Staging', description='The model version 3 was transitioned to Staging on 2023-05-28', last_updated_timestamp=1685255110892, name='green data duration prediction', run_id='77ee85eda95340f3a6fea26bff864a02', run_link=None, source='/workspaces/codespaces-blank/mlruns/1/77ee85eda95340f3a6fea26bff864a02/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=3>], name='green data duration prediction', tags={}>]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,12 +332,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_test = read_dataframe('data/green_tripdata_2021-03.parquet')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_991/422847004.py:1: FutureWarning: ``mlflow.tracking.client.MlflowClient.download_artifacts`` is deprecated since 2.0. This method will be removed in a future release. Use ``mlflow.artifacts.download_artifacts`` instead.\n",
+      "  client.download_artifacts(run_id='d95a1ba956ec425baf0d2076fb9eafa1',\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/codespaces-blank/preprocessor'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.download_artifacts(run_id='d95a1ba956ec425baf0d2076fb9eafa1', \n",
+    "                          path='preprocessor',\n",
+    "                          dst_path='.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('preprocessor/preprocessor.b', 'rb') as f_in:\n",
+    "    dv = pickle.load(f_in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = preprocess(df_test, dv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'duration'\n",
+    "y_test = df_test[target].values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/05/29 04:31:34 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - mlflow (current: 2.3.2, required: mlflow==2.3)\n",
+      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[04:31:35] WARNING: ../src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "CPU times: user 13.4 s, sys: 50 ms, total: 13.4 s\n",
+      "Wall time: 4.55 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': 6.243007626483976}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time test_model(stage=\"Staging\", X_test=X_test, y_test=y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
