--- a/homework_02_wandb.ipynb
+++ b/homework_02_wandb.ipynb
@@ -151,11 +151,301 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q3. Train a model with Weights & Biases logging\n",
+    "\n",
+    "We will train a `RandomForestRegressor` (from Scikit-Learn) on the taxi dataset.\n",
+    "\n",
+    "We have prepared the training script `train.py` for this exercise, which can be also found in the folder `homework-wandb`. \n",
+    "\n",
+    "The script will:\n",
+    "\n",
+    "* initialize a Weights & Biases run.\n",
+    "* load the preprocessed datasets by fetching them from the Weights & Biases artifact previously created,\n",
+    "* train the model on the training set,\n",
+    "* calculate the MSE score on the validation set and log it to Weights & Biases,\n",
+    "* save the trained model and log it to Weights & Biases as a model artifact.\n",
+    "\n",
+    "Your task is to modify the script to enable to add Weights & Biases logging, execute the script and then check the Weights & Biases run UI to check that the experiment run was properly tracked.\n",
+    "\n",
+    "TODO 1: log `mse` to Weights & Biases under the key `\"MSE\"`\n",
+    "\n",
+    "TODO 2: log `regressor.pkl` as an artifact of type `model`, refer to the [official docs](https://docs.wandb.ai/guides/artifacts) in order to know more about logging artifacts.\n",
+    "\n",
+    "You can run the script using:\n",
+    "\n",
+    "```bash\n",
+    "python train.py \\\n",
+    "  --wandb_project <WANDB_PROJECT_NAME> \\\n",
+    "  --wandb_entity <WANDB_USERNAME> \\\n",
+    "  --data_artifact \"<WANDB_USERNAME>/<WANDB_PROJECT_NAME>/NYC-Taxi:v0\"\n",
+    "```\n",
+    "\n",
+    "Tip 1: You can find the artifact address under the `Usage` tab in the respective artifact's page.\n",
+    "\n",
+    "Tip 2: don't modify the hyperparameters of the model to make sure that the training will finish quickly.\n",
+    "\n",
+    "Once you have successfully ran the script, navigate the `Overview` section of the run in the Weights & Biases UI and scroll down to the `Configs`. What is the value of the `max_depth` parameter:\n",
+    "\n",
+    "* 4\n",
+    "* 6\n",
+    "* 8\n",
+    "* 10"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from types import SimpleNamespace\n",
+    "\n",
+    "config = SimpleNamespace(\n",
+    "    WANDB_PROJECT='mlops-zoomcamp',\n",
+    "    WANDB_ENTITY=None,\n",
+    "    ARTIFACT_NAME='aaalex-lit/mlops-zoomcamp/NYC-Taxi:v0',\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load https://github.com/DataTalksClub/mlops-zoomcamp/raw/main/cohorts/2023/02-experiment-tracking/homework-wandb/train.py\n",
+    "import os\n",
+    "import pickle\n",
+    "\n",
+    "import wandb\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n",
+    "def load_pickle(filename: str):\n",
+    "    with open(filename, \"rb\") as f_in:\n",
+    "        return pickle.load(f_in)\n",
+    "\n",
+    "\n",
+    "def run_train(\n",
+    "    wandb_project: str,\n",
+    "    wandb_entity: str,\n",
+    "    data_artifact: str,\n",
+    "    max_depth: int,\n",
+    "    random_state: int,\n",
+    "):\n",
+    "    # Initialize a Weights & Biases run\n",
+    "    wandb.init(\n",
+    "        project=wandb_project,\n",
+    "        entity=wandb_entity,\n",
+    "        job_type=\"train\",\n",
+    "        config={\"max_depth\": max_depth, \"random_state\": random_state},\n",
+    "    )\n",
+    "\n",
+    "    # Fetch the preprocessed dataset from artifacts\n",
+    "    artifact = wandb.use_artifact(data_artifact, type=\"preprocessed_dataset\")\n",
+    "    data_path = artifact.download()\n",
+    "\n",
+    "    X_train, y_train = load_pickle(os.path.join(data_path, \"train.pkl\"))\n",
+    "    X_val, y_val = load_pickle(os.path.join(data_path, \"val.pkl\"))\n",
+    "\n",
+    "    # Define the XGBoost Regressor Mode, train the model and perform prediction\n",
+    "    rf = RandomForestRegressor(max_depth=max_depth, random_state=random_state)\n",
+    "    rf.fit(X_train, y_train)\n",
+    "    y_pred = rf.predict(X_val)\n",
+    "\n",
+    "    mse = mean_squared_error(y_val, y_pred, squared=False)\n",
+    "    # TODO: Log `mse` to Weights & Biases under the key `\"MSE\"`\n",
+    "    wandb.log({'MSE': mse})\n",
+    "\n",
+    "    with open(\"regressor.pkl\", \"wb\") as f:\n",
+    "        pickle.dump(rf, f)\n",
+    "\n",
+    "    # TODO: Log `regressor.pkl` as an artifact of type `model`\n",
+    "    regressor_model = wandb.Artifact('regressor', type='model')\n",
+    "    regressor_model.add_file(\"regressor.pkl\")\n",
+    "    wandb.log_artifact(regressor_model)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.15.3"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/workspaces/codespaces-blank/wandb/run-20230604_072304-71zfkf71</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/aaalex-lit/mlops-zoomcamp/runs/71zfkf71' target=\"_blank\">dandy-plant-4</a></strong> to <a href='https://wandb.ai/aaalex-lit/mlops-zoomcamp' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/aaalex-lit/mlops-zoomcamp' target=\"_blank\">https://wandb.ai/aaalex-lit/mlops-zoomcamp</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/aaalex-lit/mlops-zoomcamp/runs/71zfkf71' target=\"_blank\">https://wandb.ai/aaalex-lit/mlops-zoomcamp/runs/71zfkf71</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m:   4 of 4 files downloaded.  \n"
+     ]
+    }
+   ],
+   "source": [
+    "run_train(\n",
+    "    wandb_project=config.WANDB_PROJECT,\n",
+    "    wandb_entity=config.WANDB_ENTITY,\n",
+    "    data_artifact=config.ARTIFACT_NAME,\n",
+    "    max_depth=10,\n",
+    "    random_state=0,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>MSE</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>MSE</td><td>2.45398</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">dandy-plant-4</strong> at: <a href='https://wandb.ai/aaalex-lit/mlops-zoomcamp/runs/71zfkf71' target=\"_blank\">https://wandb.ai/aaalex-lit/mlops-zoomcamp/runs/71zfkf71</a><br/>Synced 6 W&B file(s), 0 media file(s), 1 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20230604_072304-71zfkf71/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wandb.finish()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q4. Tune model hyperparameters\n",
+    "\n",
+    "Now let's try to reduce the validation error by tuning the hyperparameters of the `RandomForestRegressor` using [Weights & Biases Sweeps](https://docs.wandb.ai/guides/sweeps). We have prepared the script `sweep.py` for this exercise in the `homework-wandb` directory.\n",
+    "\n",
+    "Your task is to modify `sweep.py` to pass the parameters `n_estimators`, `min_samples_split` and `min_samples_leaf` from `config` to `RandomForestRegressor` inside the `run_train()` function. Then we will run the sweep to figure out not only the best best of hyperparameters for training our model, but also to analyze the most optimum trends in different hyperparameters. We can run the sweep using:\n",
+    "\n",
+    "```bash\n",
+    "python sweep.py \\\n",
+    "  --wandb_project <WANDB_PROJECT_NAME> \\\n",
+    "  --wandb_entity <WANDB_USERNAME> \\\n",
+    "  --data_artifact \"<WANDB_USERNAME>/<WANDB_PROJECT_NAME>/NYC-Taxi:v0\"\n",
+    "```\n",
+    "\n",
+    "This command will run the sweep for 5 iterations using the **Bayesian Optimization and HyperBand** method proposed by the paper [BOHB: Robust and Efficient Hyperparameter Optimization at Scale](https://arxiv.org/abs/1807.01774). You can take a look at the sweep on your Weights & Biases dashboard, take a look at the **Parameter Inportance Panel** and the **Parallel Coordinates Plot** to determine, and analyze which hyperparameter is the most important:\n",
+    "\n",
+    "* `max_depth`\n",
+    "* `n_estimators`\n",
+    "* `min_samples_split`\n",
+    "* `min_samples_leaf`"
+   ]
   }
  ],
  "metadata": {
