--- a/homework_04/starter.ipynb
+++ b/homework_04/starter.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_data('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2022-02.parquet')\n",
+    "year = 2022\n",
+    "month = 2\n",
+    "taxi_type = 'yellow'\n",
+    "df = read_data(f'https://d37ci6vzurychx.cloudfront.net/trip-data/{taxi_type}_tripdata_{year:04d}-{month:02d}.parquet')\n",
     "df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')\n"
    ]
   },
@@ -148,6 +151,96 @@
    ],
    "source": [
     "round(y_pred.std(), 2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q2. Preparing the output\n",
+    "\n",
+    "Like in the course videos, we want to prepare the dataframe with the output. \n",
+    "\n",
+    "First, let's create an artificial `ride_id` column:\n",
+    "\n",
+    "```python\n",
+    "df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')\n",
+    "```\n",
+    "\n",
+    "Next, write the ride id and the predictions to a dataframe with results. \n",
+    "\n",
+    "Save it as parquet:\n",
+    "\n",
+    "```python\n",
+    "df_result.to_parquet(\n",
+    "    output_file,\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "What's the size of the output file?\n",
+    "\n",
+    "* 28M\n",
+    "* 38M\n",
+    "* 48M\n",
+    "* 58M\n",
+    "\n",
+    "__Note:__ Make sure you use the snippet above for saving the file. It should contain only these two columns. For this question, don't change the\n",
+    "dtypes of the columns and use pyarrow, not fastparquet. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result = pd.DataFrame()\n",
+    "df_result['ride_id'] = df['ride_id']\n",
+    "df_result['predicted_duration'] = y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = f'../data/predicted_duration_{taxi_type}_tripdata_{year:04d}-{month:02d}.parquet'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result.to_parquet(\n",
+    "    output_file,\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-rw-rw- 1 codespace codespace 58M Jun 19 11:42 ../data/../data/predicted_duration_yellow_tripdata_2022-02.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -lh ../data/{output_file} "
    ]
   },
   {
