--- a/homework_02_wandb.ipynb
+++ b/homework_02_wandb.ipynb
@@ -255,7 +255,7 @@
     "    X_train, y_train = load_pickle(os.path.join(data_path, \"train.pkl\"))\n",
     "    X_val, y_val = load_pickle(os.path.join(data_path, \"val.pkl\"))\n",
     "\n",
-    "    # Define the XGBoost Regressor Mode, train the model and perform prediction\n",
+    "    # Define the RandomForestRegressor, train the model and perform prediction\n",
     "    rf = RandomForestRegressor(max_depth=max_depth, random_state=random_state)\n",
     "    rf.fit(X_train, y_train)\n",
     "    y_pred = rf.predict(X_val)\n",
@@ -480,7 +480,7 @@
     "    X_train, y_train = load_pickle(os.path.join(data_path, \"train.pkl\"))\n",
     "    X_val, y_val = load_pickle(os.path.join(data_path, \"val.pkl\"))\n",
     "\n",
-    "    # Define the XGBoost Regressor Mode, train the model and perform prediction\n",
+    "    # Define the RandomForestRegressor, train the model and perform prediction\n",
     "    # TODO: Pass the parameters n_estimators, min_samples_split, min_samples_leaf from `config` to `RandomForestRegressor`\n",
     "    rf = RandomForestRegressor(max_depth=config.max_depth, random_state=0,\n",
     "                               n_estimators=config.n_estimators,\n",
